# zench

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cspell.json  makefile  readme.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  zench-ci.yml
docs/: configure-editors.md
docs/decisions/: outlier-algorithm-iqrz.md  template.md
zench/: Cargo.toml  README.md  build.rs
zench/src/: bench.rs  bench_drop.rs  global.rs  lib.rs  macro_force_print.rs  macro_location.rs  macro_zench.rs  mock.rs  utc.rs  warmup.rs
zench/src/algorithm/: cv.rs  log_distance.rs  mad.rs  mean.rs  median.rs  mod.rs  pct_variation.rs  std_dev.rs
zench/src/benchmark/: benchmark.rs  benchset.rs  filter.rs  format_number.rs  mod.rs  outlier.rs  samples.rs  time_unit.rs
zench/src/engine/: batch.rs  black_box.rs  builder_auto.rs  builder_fixed.rs  builder_full_fixed.rs  impl_batcher_auto_fixed_match.rs  impl_batcher_auto_loop_increment.rs  impl_batcher_fixed.rs  impl_sampler_auto_by_stability.rs  impl_sampler_fixed.rs  interface.rs  measure.rs  mod.rs
zench/src/report/: _renderer.rs  colors.rs  display.rs  mod.rs  report.rs  table.rs
zench/tests/: assert_compiler_optimizations.rs  assert_similar_execution_times.rs  display_clone.rs  display_self.rs  display_timing_sleep_range.rs  modes.rs  string_concatenation_methods.rs  temp.rs
zench_examples/cpu_stability_trait_for_report/: Cargo.toml  readme.md
zench_examples/cpu_stability_trait_for_report/src/: extend.rs  main.rs
zench_examples/criterion_to_zench/: Cargo.toml
zench_examples/criterion_to_zench/benches/: fibonacci_criterion.rs  fibonacci_zench.rs  loop_format_criterion.rs  loop_format_zench.rs  sleep_criterion.rs  sleep_zench.rs
zench_examples/readme_examples/: Cargo.toml
zench_examples/readme_examples/examples/: README.md  ex_00.rs  ex_00b.rs  ex_01.rs  ex_02.rs  ex_03.rs  ex_04.rs
zench_examples/some_examples/: Cargo.toml
zench_examples/some_examples/examples/: bx_vs_black_box_benchmarks.rs  fastest_std_dev_algorithm.rs  print_benchmark_methods.rs  simple_regression.rs  timing_sleep_range.rs  vec_clone_performance.rs  xtring.rs
